--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,236 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
-}
-
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 158px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
+.integrationsImgsBox {
+    display: flex;
+    gap: 20px;
     align-items: center;
-  }
+    padding: 30px 0 0 10px;
+}
 
-  .main ol {
-    text-align: center;
-  }
+.integrationsImgsBox p {
+    font-size: var(--fs-p6);
+    font-weight: 600;
+    color: var(--clr-grey);
+    display: none;
+}
 
-  .ctas {
+.promoBox {
+    margin: 48px 0 0 0;
+    position: relative;
+}
+
+.promoBox::after {
+    content: '';
+    position: absolute;
+    bottom: -48px;
+    left: calc(50% - 280px / 2);
+    height: .5px;
+    width: 280px;
+    z-index: 9999;
+    background: var(--clr-grey-drk);
+}
+
+.promoContent {
+    margin: 0 auto;
+    display: flex;
     flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-  }
+    gap: 32px;
+    text-align: center;
+    max-width: 320px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.promoTitle {
+    font-size: var(--fs-h2);
+    font-weight: 700;
+    background: var(--gl-d2l);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    background-clip: text;
+    color: transparent;
+}
+
+.promoDesc {
+    color: var(--clr-grey);
+    font-size: var(--fs-p4);
+    font-weight: 700;
+}
+
+.promoTaglines {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+}
+
+.tagline {
+    font-size: var(--fs-p2);
+    font-weight: 700;
+
+    background: var(--gl-blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    background-clip: text;
+    color: transparent;
+}
+
+.tagline:last-child {
+
+    font-size: var(--fs-h1);
+
+    background: var(--gl-d2l);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+}
+
+.btnPrime {
+    font-size: var(--fs-p2);
+    font-weight: 700;
+
+    background: var(--gl-d2l);
+    color: var(--clr-white);
+
+    padding: 17px;
+    width: 100%;
+    border-radius: 100px;
+    border: none;
+    cursor: pointer;
+}
+
+
+.isoBox {
+    margin: 48px 0 0 0;
+    width: 100%;
+    display: grid;
+    place-content: center;
+    text-align: center;
+}
+
+.isoContent {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    width: 320px;
+}
+
+
+.isoLogo img {
+    width: 200px;
+    height: 100%;
+    object-fit: contain;
+}
+
+.isoDesc {
+    font-size: var(--fs-p3);
+    font-weight: 700;
+    color: var(--clr-grey);
+}
+
+
+
+
+@media (min-width: 768px) {
+
+    .promoBox {
+        margin: 100px 0 0 0;
+    }
+
+    .promoBox::after {
+        content: '';
+        position: absolute;
+        bottom: -100px;
+        left: calc(50% - 1000px / 2);
+        height: .5px;
+        width: 1000px;
+        z-index: 9999;
+        background: var(--clr-grey-drk);
+    }
+
+    .promoContent {
+        gap: 36px;
+        max-width: 920px;
+    }
+
+    .promoTitle {
+        font-size: var(--fs-h4);
+        font-weight: 700;
+        -webkit-background-clip: none;
+        -webkit-text-fill-color: var(--clr-prime);
+
+        background-clip: none;
+        color: var(--clr-prime);
+    }
+
+    .promoDesc {
+        color: var(--clr-grey);
+        font-size: var(--fs-p3);
+        font-weight: 400;
+        line-height: 140%;
+    }
+
+    .promoTaglines {
+        gap: 36px;
+    }
+
+    .tagline {
+        font-size: var(--fs-p1);
+        font-weight: 400;
+    }
+
+    .tagline:last-child {
+
+        font-size: var(--fs-h4);
+        font-weight: 700;
+        -webkit-background-clip: none;
+        -webkit-text-fill-color: var(--clr-prime);
+        background-clip: none;
+        color: var(--clr-prime);
+    }
+
+    .btnPrime {
+        font-size: var(--fs-p3);
+        font-weight: 700;
+
+        background: var(--gl-d2l);
+        color: var(--clr-white);
+
+        padding: 17.5px;
+        max-width: 320px;
+    }
+
+
+    .isoBox {
+        margin: 100px 0 0 0;
+    }
+
+    .isoContent {
+        width: 400px;
+    }
+
+
+    .isoLogo img {
+        width: 260px;
+    }
+
+    .isoDesc {
+        font-size: var(--fs-p2);
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .integrationsImgsBox {
+        margin: 100px 0 0 0;
+        padding: 0 30px 0 80px;
+    }
+
+    .integrationsImgsBox p {
+        font-size: var(--fs-p5);
+        flex-shrink: 0;
+        display: block;
+    }
+
 }
