--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,143 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  /*        Typography */
+  --fs-h1: 28px;
+  --fs-h2: 24px;
+  --fs-h3: 20px;
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+  --fs-p1: 24px;
+  --fs-p2: 20px;
+  --fs-p3: 16px;
+  --fs-p4: 14px;
+  --fs-p5: 12px;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /*        Colors */
+  --clr-white: #ffffff;
+  --clr-grey-lt: #f8f8f8;
+  --clr-grey-drk: #d9d9d9;
+  --clr-grey: #5d5d5d;
+
+  --clr-prime: #e7660b;
+  --clr-body: #04182e;
+  --clr-black: #000D1F;
+
+  /*        Gradients */
+  --gl-d2l: linear-gradient(270deg, #FF780A 0%, #994806 100%);
+  --gl-w2l: linear-gradient(90deg, #FFFFFF 0%, #FFC899 100%);
+  --gl-l2w: linear-gradient(270deg, #FFFFFF 20%, #ffc999ac 100%);
+  --gl-o2b2o: linear-gradient(81.06deg, #FF780A 0%, #1E285F 31.5%, #8BB7FF 52.5%, #140152 77.97%, #E7660B 95.64%);
+  --gl-fade: linear-gradient(270deg, rgba(217, 217, 217, 0) 0%, #d9d9d921 100%); 
+  --gl-blue: linear-gradient(270deg, #01050A 0%, #012552 100%);
+  --gl-fade-lt: linear-gradient(90deg, #F8F8F8 0%, rgba(248, 248, 248, 0) 100%);
+
+  --hover-gl-d2l: linear-gradient(100deg, #FF780A 0%, #994806 100%);
+
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: var(--clr-white);
+  color: var(--clr-body);
+  font-family: var(--font-prime);
+
+  overflow-x: hidden;
+}
+
+html {
+  scroll-behavior: auto;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: var(--clr-body);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+h1 {
+  font-size: var(--fs-h1);
+}
+
+h2 {
+  font-size: var(--fs-h2);
+}
+
+h3 {
+  font-size: var(--fs-h3);
+}
+
+p {
+  font-size: var(--fs-p2);
+}
+
+.p1 {
+  font-size: var(--fs-p1);
+}
+
+.p2 {
+  font-size: var(--fs-p2);
+}
+
+.p3 {
+  font-size: var(--fs-p3);
+}
+
+.p4 {
+  font-size: var(--fs-p4);
+}
+
+.p5 {
+  font-size: var(--fs-p5);
+}
+
+.flex {
+  display: flex;
+}
+
+
+
+@media (min-width: 768px) {
+
+  :root {
+
+      /*        Typography */
+      --fs-h1: 50px;
+      --fs-h2: 48px;
+      --fs-h3: 44px;
+      --fs-h4: 40px;
+      --fs-h5: 22px;
+      --fs-h6: 20px;
+
+      --fs-p1: 32px;
+      --fs-p2: 24px;
+      --fs-p3: 20px;
+      --fs-p4: 18px;
+      --fs-p5: 16px;
+      --fs-p6: 12px;
   }
+
+  h4 {
+    font-size: var(--fs-h4);
+  }
+
+  h5 {
+    font-size: var(--fs-h5);
+  }
+
+  h6 {
+    font-size: var(--fs-h6);
+  }
+
+  p {
+    font-size: var(--fs-p1);
+  }
+
+  .p6 {
+    font-size: var(--fs-p6);
+  }
+
 }
