--- a/src/app/components/Sections/Hero/styles.module.css
+++ b/src/app/components/Sections/Hero/styles.module.css
@@ -239,7 +239,7 @@
         flex-direction: column;
         /* gap: 36px; */
         gap: 28px;
-        max-width: 550px;
+        max-width: 554px;
     }
 
     .heroTitle {
@@ -272,7 +272,7 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 22px;
-        padding: 20px;
+        padding: 20px 20px 26px 20px;
         margin: 0;
     }
 
@@ -291,7 +291,7 @@
     .btnBox a {
         padding: 10px 24px;
         font-size: var(--fs-p4);
-        font-weight: 500;
+        font-weight: 700;
         background-color: var(--clr-grey-drk);
         border-radius: 200px;
         /* display: flex;
@@ -301,7 +301,7 @@
     .heroVid {
         flex-shrink: 0;
         padding: 0 20px;
-        max-width: 600px;
+        max-width: 650px;
     }
 
     .vidBox {
