--- a/src/app/components/Sections/Intigrations/styles.module.css
+++ b/src/app/components/Sections/Intigrations/styles.module.css
@@ -64,11 +64,12 @@
         padding: 12px;
         border-radius: 8px;
         cursor: pointer;
+        color: var(--clr-grey);
     }
 
     .intNavItem:hover {
-        background: #FF780A2E;
-        outline: 1px solid var(--clr-prime);
+        color: var(--clr-body);
+        font-weight: 500;
         transition: all 0.2s ease-in-out;
     }
 
@@ -77,7 +78,7 @@
         border-radius: 8px;
         outline: 1px solid var(--clr-prime);
         cursor: pointer;
-
+        color: var(--clr-body);
         background: #FF780A2E;
 
     }
@@ -89,8 +90,10 @@
 
 
     .initDynamicBox {
-        width: 540px;
-        height: 360px;
+        /* width: 540px;
+        height: 360px; */
+        width: 620px;
+        height: 440px;
         overflow: hidden;
         background-color: var(--clr-white);
         box-shadow: 35px 10px 78.75px 0px #FF9A0A1A;
@@ -101,7 +104,8 @@
 
     .initImg {
         width: 100%;
-        height: 240px; /* Match your image height */
+        /* height: 240px;  */
+        height: 266px;
         overflow: hidden;
     }
 
