--- a/src/app/components/Sections/Services/styles.module.css
+++ b/src/app/components/Sections/Services/styles.module.css
@@ -79,9 +79,9 @@
 
 .serviceTitle {
   font-size: var(--fs-h2);
-  color: var(--clr-prime);
+  color: var(--clr-alt);
   font-weight: 700;
-  margin-bottom: 8px;
+  margin-bottom: 13px;
 }
 
 .serviceSubtitle {
@@ -104,7 +104,7 @@
   border-radius: 25px;
   padding: 12px 24px;
   font-size: var(--fs-p4);
-  font-weight: 600;
+  font-weight: 700;
   cursor: pointer;
   align-self: center;
 }
@@ -243,13 +243,14 @@
     justify-content: center;
     gap: 20px;
     margin-bottom: 48px;
+    width: 100%;
   }
 
   .serviceButton {
     padding: 12px 50px;
     font-size: var(--fs-p4);
-    font-weight: 400;
-    width: max-content;
+    font-weight: 700;
+    width: 100%;
     border-radius: 10px;
   }
 
@@ -266,7 +267,7 @@
     align-items: flex-start;
     text-align: left;
     gap: 40px;
-    margin-bottom: 48px;
+    margin-bottom: 36px;
   }
 
   .serviceTitle {
@@ -281,7 +282,7 @@
   }
 
   .serviceDescription {
-    font-size: var(--fs-p2);
+    font-size: var(--fs-p3);
     font-weight: 400;
   }
 
@@ -295,17 +296,19 @@
 
   .serviceCards {
     grid-template-columns: repeat(2, 1fr);
-    gap: 28px;
+    gap: 24px;
   }
 
   .serviceCard {
-    padding: 50px 40px 40px 40px;
+    /* padding: 50px 40px 40px 40px; */
+    padding: 24px 48px;
 
   }
 
   .cardTitle {
-    font-size: var(--fs-h6);
-    font-weight: 600;
+    font-size: var(--fs-p2);
+    font-weight: 700;
+    margin-bottom: 34px;
   }
 
   .cardDescription {
@@ -315,7 +318,13 @@
 
   .cardCta {
     padding: 12px 24px;
-    font-size: var(--fs-p5);
+    font-size: var(--fs-p3);
+    font-weight: 700;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .showLessButton{
