--- a/src/app/components/Sections/Services/styles.module.css
+++ b/src/app/components/Sections/Services/styles.module.css
@@ -292,6 +292,8 @@
     flex-shrink: 0;
     align-self: start;
     margin: 10px;
+
+    border-radius: 50px;
   }
 
   .serviceCards {
@@ -302,6 +304,7 @@
   .serviceCard {
     /* padding: 50px 40px 40px 40px; */
     padding: 24px 48px;
+    border-radius: 24px;
 
   }
 
@@ -325,6 +328,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    border-radius: 50px;
   }
 
   .showLessButton{
