--- a/src/app/components/Sections/Intigrations/styles.module.css
+++ b/src/app/components/Sections/Intigrations/styles.module.css
@@ -25,7 +25,7 @@
     }
 
     .integrationsBox {
-        max-width: 820px;
+        max-width: 730px;
         display: flex;
         flex-direction: column;
         gap: 48px;
@@ -47,15 +47,15 @@
         font-size: var(--fs-p4);
         font-weight: 400;
         color: var(--clr-grey);
-        max-width: 750px;
+        max-width: 700px;
     }
 
     .intNav {
         display: flex;
-        gap: 12px;
+        gap: 10px;
         flex-wrap: wrap;
         background: #B0B0B00D;
-        padding: 20px 30px 30px 22px;
+        padding: 20px 10px 30px 18px;
         border-radius: 16px;
         border: 1px solid var(--clr-grey-drk);
     }
@@ -84,7 +84,7 @@
     }
 
     .intNavItem p {
-        font-size: var(--fs-p4);
+        font-size: var(--fs-p5);
     }
 
 
@@ -131,4 +131,24 @@
         background-repeat: no-repeat;
         transition: background-position 0.5s ease-in-out;
     }
+}
+
+@media (min-width: 1920px) {
+    .integrationsBox {
+        max-width: 830px;
+    }
+
+    .integrationsDescription {
+        max-width: 720px;
+    }
+
+    .intNav {
+        gap: 14px;
+        padding: 20px 30px 30px 30px;
+    }
+
+    .intNavItem p {
+        font-size: var(--fs-p4);
+    }
+
 }
