--- a/src/app/components/UI/Cards/Catagory/styles.module.css
+++ b/src/app/components/UI/Cards/Catagory/styles.module.css
@@ -60,7 +60,7 @@
         max-width: 500px;
         padding: 30px;
         border-radius: 16px;
-        flex-shrink: 0;
+        height: 190px;
     }
 
     .iconBox {
