--- a/src/app/components/Sections/Intigrations/styles.module.css
+++ b/src/app/components/Sections/Intigrations/styles.module.css
@@ -22,6 +22,7 @@
         gap: 30px;
         align-items: center;
         justify-content: center;
+        padding: 0 48px;
     }
 
     .integrationsBox {
@@ -48,6 +49,7 @@
         font-weight: 400;
         color: var(--clr-grey);
         max-width: 700px;
+        line-height: 148%;
     }
 
     .intNav {
