--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,6 +171,10 @@ p {
 
 @media (min-width: 768px) {
 
+  html {
+    scroll-padding-top: 110px;
+  }
+
   :root {
 
       /*        Typography */
@@ -241,7 +245,7 @@ p {
     background: linear-gradient(white, white) padding-box,
                 linear-gradient(81.06deg, #FF780A 0%, #1E285F 31.5%, #8BB7FF 52.5%, #140152 77.97%, #E7660B 95.64%) border-box;
 
-    border: 3px solid transparent;
+    border: 2px solid transparent;
     color: #333;
   }
 
