--- a/src/app/components/Sections/Process/styles.module.css
+++ b/src/app/components/Sections/Process/styles.module.css
@@ -52,7 +52,9 @@
 
 .subtitle {
     font-size: var(--fs-p2);
-    font-weight: 600;
+    font-weight: 400;
+
+    line-height: 1.2;
 
     background: var(--gl-blue);
     -webkit-background-clip: text;
@@ -64,9 +66,9 @@
 
 .description {
     font-size: var(--fs-p4);
-    font-weight: 700;
+    font-weight: 400;
     color: var(--clr-grey);
-    line-height: 150%;
+    line-height: 1.5;
 }
 
 
