--- a/src/app/components/Sections/Services/styles.module.css
+++ b/src/app/components/Sections/Services/styles.module.css
@@ -4,6 +4,8 @@
   padding: 40px 20px;
   min-height: 100vh;
   margin: 48px 0 0 0;
+
+  overflow-anchor: none;
 }
 
 .container {
@@ -13,14 +15,23 @@
 
 .header {
   text-align: center;
-  margin-bottom: 32px;
+  margin-bottom: 36px;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 .title {
   font-size: var(--fs-h2);
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.2;
   margin-bottom: 16px;
+}
+
+.title span {
+  font-size: var(--fs-h1);
+  font-weight: 700;
+  line-height: 1.2;
+  display: inline-block;
 }
 
 .highlight {
@@ -81,21 +92,23 @@
   font-size: var(--fs-h2);
   color: var(--clr-alt);
   font-weight: 700;
-  margin-bottom: 13px;
+  margin-bottom: 8px;
 }
 
 .serviceSubtitle {
   font-size: var(--fs-p3);
-  color: var(--clr-grey);
-  margin-bottom: 16px;
+  color: var(--clr-body);
+  font-weight: 400;
+  margin-bottom: 18px;
 }
 
 .serviceDescription {
   font-size: var(--fs-p3);
   line-height: 1.6;
-  /* color: var(--clr-body); */
   color: var(--clr-grey);
-  font-weight: 500;
+  /* color: var(--clr-grey); */
+  font-weight: 400;
+  padding: 0 16px;
 }
 
 .serviceDescriptionDesk{
@@ -185,16 +198,29 @@
 
 .arrow {
   transition: transform 0.3s ease;
+  display: grid;
+  place-content: center;
 }
 
 .cardCta:hover .arrow {
   transform: translateX(4px);
 }
 
+.arrow svg {
+  width: 14px;
+  height: 14px;
+
+  transform: rotate(90deg);
+}
+
+.arrow svg path {
+  fill: var(--clr-white);
+}
+
 .showLessButton {
   background: none;
   border: none;
-  color: var(--clr-grey);
+  color: #9E9E9E;
   font-size: var(--fs-p3);
   font-weight: 600;
   cursor: pointer;
@@ -211,16 +237,28 @@
 
 .chevron {
   transition: transform 0.3s ease;
+  display: grid;
+  place-content: center;
 }
 
 .chevron.up {
   transform: rotate(180deg);
 }
 
+.chevron svg {
+  width: 14px;
+  height: 14px;
+}
+
+.showLessButton:hover .chevron svg path {
+  fill: var(--clr-prime);
+}
+
 /* Tablet and Desktop Styles */
 @media (min-width: 768px) {
   .services {
     padding: 80px 40px;
+    min-height: 510px;
   }
 
   .header {
@@ -348,7 +386,7 @@
 
   .showLessButton{
     margin: 0;
-    color: var(--clr-grey-drk);
+    /* color: var(--clr-grey-drk); */
   }
 }
 
