--- a/src/app/components/Sections/SubSections/styles.module.css
+++ b/src/app/components/Sections/SubSections/styles.module.css
@@ -53,6 +53,8 @@
     color: var(--clr-grey);
     font-size: var(--fs-p4);
     font-weight: 400;
+
+    line-height: 1.5;
 }
 
 .promoTaglines {
@@ -64,11 +66,13 @@
 
 .tagline {
     font-size: var(--fs-p2);
-    font-weight: 700;
+    font-weight: 400;
 
     background: var(--gl-blue);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    line-height: 1.4;
 
     background-clip: text;
     color: transparent;
@@ -78,6 +82,8 @@
 
     font-size: var(--fs-h1);
 
+    line-height: 1;
+    font-weight: 700;
     background: var(--gl-d2l);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
