--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,7 +2,7 @@
     display: flex;
     gap: 20px;
     align-items: center;
-    padding: 30px 0 0 10px;
+    padding: 30px 0 0 30px;
 }
 
 .integrationsImgsBox p {
@@ -224,7 +224,7 @@
 @media (min-width: 1024px) {
     .integrationsImgsBox {
         margin: 100px 0 0 0;
-        padding: 0 30px 0 80px;
+        padding: 0 30px 20px 80px;
     }
 
     .integrationsImgsBox p {
