--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,9 @@
   --gl-fade: linear-gradient(270deg, rgba(217, 217, 217, 0) 0%, #d9d9d921 100%); 
   --gl-blue: linear-gradient(270deg, #01050A 0%, #012552 100%);
   --gl-fade-lt: linear-gradient(90deg, #F8F8F8 0%, rgba(248, 248, 248, 0) 100%);
+  --gl-darkFade: linear-gradient(90deg, rgba(153, 153, 153, 0.2) 0%, #333333 100%);;
+
+
 
   --hover-gl-d2l: linear-gradient(100deg, #FF780A 0%, #994806 100%);
 
@@ -155,6 +158,15 @@ p {
   color: #333;
 }
 
+.pageTitle {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: var(--fs-h1);
+  font-weight: 700;
+  color: var(--clr-prime);
+  margin: 48px 0 48px 0;
+}
+
 
 
 
@@ -254,5 +266,9 @@ p {
                 linear-gradient(270deg, rgba(217, 217, 217, 0) 0%, #D9D9D9 100%) border-box !important;
     border: 2px solid transparent !important;
     color: #333;
+  }
+
+  .pageTitle {
+    margin: 60px 0 60px 0;
   }
 }
