initgration img slide changed

--- a/src/app/components/Sections/Intigrations/styles.module.css
+++ b/src/app/components/Sections/Intigrations/styles.module.css
@@ -107,7 +107,8 @@
     .initImg {
         width: 100%;
         /* height: 240px;  */
-        height: 266px;
+        /* height: 266px; */
+        height: 398px;
         overflow: hidden;
     }
 
