--- a/src/app/components/Sections/Footer/styles.module.css
+++ b/src/app/components/Sections/Footer/styles.module.css
@@ -135,10 +135,11 @@
     }
 
     .footerContent {
+
         flex-direction: row;
         gap: 220px;
         
-        padding-bottom: 20px;
+        padding: 0 42px 20px 42px;
         border-bottom: 1px solid var(--clr-grey-drk);
     }
 
