--- a/src/app/components/Sections/Process/styles.module.css
+++ b/src/app/components/Sections/Process/styles.module.css
@@ -71,7 +71,14 @@
     line-height: 1.5;
 }
 
+.illustration {
+    padding: 0 14px;
+}
 
+.illustration img {
+    width: 100%;
+    height: 100%;
+}
 
 
 
@@ -120,6 +127,10 @@
         color: var(--clr-grey);
         line-height: 150%;
         max-width: 760px;
+    }
+
+    .illustration {
+        padding: 0 42px;
     }
     
 }
